Fixed z-index stacking issue II

--- a/wcfsetup/install/files/style/ui/message.scss
+++ b/wcfsetup/install/files/style/ui/message.scss
@@ -35,6 +35,8 @@
 	
 	> .anchorFixedHeader:target {
 		pointer-events: none;
+		position: relative;
+		z-index: 10;
 		
 		&::after {
 			content: "";
